# pinglab

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  PLAN.md  README.md  TODO.md  Taskfile.yml  _nb048_coba_control.py  all.html  ar003.html  ar004.html  ar005.html  ar006.html  ar007.html  ar009.html  ar010.html  ar011.html  ar015.html  ar016.html  ar062.html  cite-popover.js  demolab.yaml  documentation.html  exp023.html  exp024.html  exp025.html  exp033.html  exp037.html  exp038.html  exp041.html  exp042.html  exp044.html  exp046.html  exp047.html  exp048.html  exp049.html  (+17 more)
experiments/: exp022.py  exp022_matched.py  exp023.py  exp024.py  exp025.py  exp033.py  exp036.py  exp037.py  exp038.py  exp041.py  exp042.py  exp044.py  exp046.py  exp047.py  exp048.py  exp049.py  exp050.py  exp054.py  exp058.py  exp059.py  exp060.py  exp061.py  exp062.py  exp063.py  exp064.py  exp065.py  exp066.py  exp068.py  exp069.py  exp070.py  exp071.py  exp072.py  exp073.py  nb022.py  nb023.py  nb024.py  nb025.py  nb033.py  nb036.py  nb037.py  (+15 more)
experiments/1_dub/: config.yaml
experiments/1_dub/lib/: experiment_6.py
experiments/2_agp/: experiment.py
experiments/3_stn/lib/: model.py
experiments/coupled-networks/: config.yaml  experiment.py
experiments/coupled-networks/lib/: encoding.py  hotloop.py  input_drive.py  model.py  packet.py  phase.py  projection.py
experiments/exp.1-metrics/: config.yaml
experiments/exp.1-metrics/lib/: model.py
experiments/exp.3-phase-dependence/lib/: experiment_2.py
experiments/exp.4-neuron-selection/: config.yaml  experiment.py
experiments/exp.4-neuron-selection/lib/: experiment.py
experiments/helpers/: __init__.py  archive.py  cli.py  datasets.py  dotenv.py  figsave.py  fmt.py  modal.py  modal_backend.py  modal_exp073_app.py  nblog.py  numbers.py  operating_point.py  paths.py  provenance.py  rhythmicity.py  run_cli.py  run_dirs.py  run_id.py  runpod.py  stamp.py  theme.py  warm_pod.py
experiments/metrics/: experiment.py
experiments/phase_dependence/: experiment.py
experiments/phase_dependence/lib/: experiment_2.py
experiments/rhythmicity/: config.yaml  experiment.py
experiments/single-image/lib/: homeostatic.py  image.py
experiments/src/experiments/: settings.py
experiments/src/experiments/agp/: __init__.py  config.yaml  experiment_1.py  experiment_2.py  experiment_3.py  experiment_6.py  hotloop.py
experiments/src/experiments/dub/: __init__.py
experiments/src/experiments/stn/: __init__.py  experiment_1.py  experiment_2.py
experiments/src/experiments/val/: __init__.py  collect_dataset.py  image_to_external_input.py
experiments/sweeps/lib/: experiment_6.py
experiments/tests/: test_exp022_matched.py  test_exp049_weight_summary.py  test_exp065_masking.py  test_exp070_decision.py  test_experiment_arg_allowlist.py  test_modal_backend.py  test_warm_pod.py
pinglab/: pyproject.toml
pinglab/src/pinglab/: __init__.py  types.py
pinglab/src/pinglab/analysis/: __init__.py  autocorr_peak.py  base_metrics.py  calculate_mean_firing_rates.py  calculate_population_rate.py  calculate_rate_psd.py  calculate_regime.py  calculate_regime_label.py  coherence.py  conductance_stats.py  crosscorr.py  ei_crosscorr.py  ei_lag_stats.py  energy_metrics.py  gamma_metrics.py  isi_cv_per_neuron.py  lagged_coherence.py  mean_firing_rates.py  mean_pairwise_xcorr_peak.py  pairwise_spike_count_corr.py  plv_metric.py  population_fano_factor.py  population_isi_cv.py  population_mean_rate.py  population_rate.py  rate_coherence.py  rate_psd.py  rhythmicity_metric.py  synchrony_index.py  test_autocorr_peak.py  test_basic_analysis.py  test_coherence.py  test_lagged_coherence.py  test_mean_pairwise_xcorr_peak.py  test_population_isi_cv.py  test_rhythmicity_metric.py  test_spectral_regime.py
pinglab/src/pinglab/inputs/: __init__.py  generate_oscillating_input.py  generate_tonic_noise_input.py  oscillating.py  pulse.py  ramp.py  test_inputs.py  tonic.py
pinglab/src/pinglab/lib/: __init__.py  adex.py  connor_stevens.py  fhn.py  hh.py  izhikevich.py  lif.py  mqif.py  qif.py  synapse.py  test_lif.py  test_models.py  test_weights_builder.py  weights_builder.py
pinglab/src/pinglab/multiprocessing/: __init__.py  parallel.py  test_parallel.py
pinglab/src/pinglab/plots/: __init__.py  instrument.py  raster.py  styles.py  test_plots.py
pinglab/src/pinglab/run/: __init__.py  apply_heterogeneity.py  connectivity.py  instruments.py  neuron_models.py  run_network.py  test_apply_heterogeneity.py  test_run_network.py  validation.py
pinglab/src/pinglab/utils/: __init__.py  expand_parameter_spec.py  load_config.py  slice_spikes.py  test_utils.py
src/api/: pyproject.toml
src/api/src/api/: api.py  model_api.py  test_api_routes.py  web_app.py
src/pinglab/: README.md  config.py  harness.py  inputs.py  metrics.py  modal_app.py  models.py  oscilloscope.py  plot.py  pyproject.toml  run_log.py  snntorch-tutorial.py  spectral.py  theme.py
src/pinglab/artifacts/oscilloscope/: config.json  (+1 more)
src/pinglab/cli/: __init__.py  __main__.py  datasets.py  encoders.py  infer.py  scan.py  snapshot.py  train.py  video.py
src/pinglab/journal/: 2026-04-17-1100-snntorch-parity-and-calibration.py  snntorch-calibration-profile.py  snntorch-calibration.py
src/pinglab/notebook/: 001-snntorch-calibration.py  002-basic-ping-videos.py  002-ping-stimulus-window.py  README.md  _run_id.py  nb001.py  nb002.py  nb003.py  nb004.py  nb005.py  snntorch-calibration.py
src/pinglab/notebooks/: README.md  _modal.py  _nb013_lib.py  _per_model.py  _ping_scan.py  _renumber.py  _run_id.py  _tier.py  dt-stability.py  nb000.py  nb001.py  nb002.py  nb003.py  nb004.py  nb005.py  nb006.py  nb007.py  nb008.py  nb009.py  nb010.py  nb011.py  nb012.py  nb013.py  nb014.py  nb015.py  nb016.py  nb017.py  nb018.py  nb019.py  nb020.py  nb021.py  nb022.py  nb023.py  nb024.py  nb025.py  nb026.py  nb027.py  nb028.py  nb029.py  nb030.py  (+23 more)
src/pinglab/oscilloscope/: __init__.py  __main__.py  encoders.py  infer.py  scan.py  snapshot.py  train.py  video.py
src/pinglab/run_log/: io.py  progress.py
(+1898 files in other folders)
