[project]
name = "pinglab"
version = "0.1.1"
description = "Spiking neural networks with explicit E/I and PING dynamics, trained with surrogate gradients and diagnosed via Δt-stability."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Eoin Murray" }]
dependencies = [
    "numpy>=2.2.6",
    "scipy>=1.15.3",
    "pytest>=9.0.1",
    "scikit-learn>=1.7.2",
    "modal>=1.3.2",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "matplotlib>=3.10.8",
    "snntorch>=0.9.4",
    "sh>=2.0.0",
    "h5py>=3.16.0",
]

[project.urls]
Homepage = "https://github.com/eoinmurray/pinglab"
Repository = "https://github.com/eoinmurray/pinglab"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cli", "src/notebooks"]

[tool.pytest.ini_options]
testpaths = ["src/cli/tests/unit"]
markers = [
    "slow: end-to-end tests that spawn subprocesses or hit the GPU",
    "regression: checks against calibrated artifacts; skipped if absent",
]

[tool.ty.environment]
extra-paths = ["typings", "src", "src/notebooks"]
