[project]
name = "pinglab"
version = "0.1.1"
description = "Spiking neural networks with explicit E/I and PING dynamics, trained with surrogate gradients and diagnosed via Δt-stability."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Eoin Murray" }]
dependencies = [
    "numpy>=2.2.6",
    "scipy>=1.15.3",
    "pytest>=9.0.1",
    "scikit-learn>=1.7.2",
    "modal>=1.3.2",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "matplotlib>=3.10.8",
    "snntorch>=0.9.4",
    "sh>=2.0.0",
    "h5py>=3.16.0",
]

[project.urls]
Homepage = "https://github.com/eoinmurray/pinglab"
Repository = "https://github.com/eoinmurray/pinglab"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cli", "src/notebooks"]

[tool.pytest.ini_options]
testpaths = ["src/cli/tests"]
pythonpath = ["src/cli"]
markers = [
    "slow: minutes of wall-clock — subprocess/GPU end-to-end tests OR heavy in-process torch training; `pytest -m 'not slow'` is the fast iteration lane",
    "regression: checks against calibrated artifacts; skipped if absent",
]
filterwarnings = [
    # torch-internal deprecation surfaced through the model build path (torch
    # warns about its own deprecated torch.jit.script_method). Not our code and
    # nothing to fix here — matched narrowly by message so our own warnings still
    # show. Revisit if a torch upgrade removes the API.
    "ignore:`torch.jit.script_method` is deprecated:DeprecationWarning",
]

[dependency-groups]
dev = [
    "pytest-cov>=7.1.0",
    "ruff>=0.15.20",
    "ty>=0.0.55",
]

[tool.coverage.run]
# `pytest --cov` measures the CLI package by default. modal_app (cloud dispatch,
# being retired for RunPod) and profiling (dev-only tooling) are excluded — they
# are not part of the tested surface, so counting them just drags the number down.
source = ["src/cli"]
omit = [
    "src/cli/tests/*",
    "src/cli/modal_app.py",
    "src/cli/profiling.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
# Hard floor enforced in CI: `pytest --cov` exits non-zero below this. The CLI
# source sits around 90%, so 85 leaves comfortable headroom for churn and for
# not-yet-tested paths (e.g. the SHD loader) without gating them.
fail_under = 85
