[project]
name = "pinglab"
version = "0.1.1"
description = "Spiking neural networks with explicit E/I and PING dynamics, trained with surrogate gradients and diagnosed via Δt-stability."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Eoin Murray" }]
dependencies = [
    "numpy>=2.2.6",
    "scipy>=1.15.3",
    "pytest>=9.0.1",
    "scikit-learn>=1.7.2",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "matplotlib>=3.10.8",
    "snntorch>=0.9.4",
    "sh>=2.0.0",
    "h5py>=3.16.0",
]

[project.urls]
Homepage = "https://github.com/eoinmurray/pinglab"
Repository = "https://github.com/eoinmurray/pinglab"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools/snn"]

# torch/torchvision on Linux resolve from PyTorch's CUDA-12.8 (cu128) wheel index
# rather than PyPI. PyPI's Linux torch wheel bundles the cu13 runtime (the
# driver-incompatible "cu130" build the RunPod pods can't use), so `uv sync`
# would bake ~2 GB of throwaway CUDA that the old Dockerfile then re-downloaded
# a second time as a cu128 `--reinstall` layer. Pinning the index makes cu128
# the *only* torch uv ever resolves on Linux — one install, one layer, no
# duplicate. The marker keeps macOS/Windows dev on the normal PyPI wheels
# (the cu128 index has no macOS build). Explicit index ⇒ only these two
# packages come from it; everything else stays on PyPI.
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu128", marker = "sys_platform == 'linux'" }]
torchvision = [{ index = "pytorch-cu128", marker = "sys_platform == 'linux'" }]

[tool.pytest.ini_options]
# The engine + its suite live under tools/snn (the snn tool). pythonpath adds
# tools/snn so the engine's flat imports (`import config`/`models`) resolve, and
# the repo root so `import tools.snn` resolves as a package. experiments/tests
# holds cross-runner gates (e.g. the meta-flag allowlist) — they belong with the
# experiments they govern, not under the tool (RULES §4.5: tools never import
# experiments/).
testpaths = ["tools/snn/tests", "experiments/tests"]
pythonpath = ["tools/snn", "."]
markers = [
    "slow: minutes of wall-clock — subprocess/GPU end-to-end tests OR heavy in-process torch training; `pytest -m 'not slow'` is the fast iteration lane",
    "regression: checks against calibrated artifacts; skipped if absent",
]
filterwarnings = [
    # torch-internal deprecation surfaced through the model build path (torch
    # warns about its own deprecated torch.jit.script_method). Not our code and
    # nothing to fix here — matched narrowly by message so our own warnings still
    # show. Revisit if a torch upgrade removes the API.
    "ignore:`torch.jit.script_method` is deprecated:DeprecationWarning",
]

[dependency-groups]
dev = [
    "pytest-cov>=7.1.0",
    "ruff>=0.15.20",
    "ty>=0.0.55",
]

[tool.coverage.run]
# `pytest --cov` measures the snn engine by default. Profiling (dev-only tooling)
# is excluded — it is not part of the tested surface, so counting it just drags
# the number down.
source = ["tools/snn"]
omit = [
    "tools/snn/tests/*",
    "tools/snn/profiling.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
# Hard floor enforced in CI: `pytest --cov` exits non-zero below this. The CLI
# source sits around 90%, so 85 leaves comfortable headroom for churn and for
# not-yet-tested paths (e.g. the SHD loader) without gating them.
fail_under = 85
