[project]
name = "pinglab-api"
version = "0.1.0"
description = "pinglab API application"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "orjson>=3.10.0",
    "uvicorn>=0.30.0",
    "modal>=1.3.2",
    "httpx>=0.28.0",
    "pinglab",
    "pyarrow>=23.0.0",
]

[tool.uv.sources]
pinglab = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api"]
