[project]
name = "pinglab"
version = "0.1.0"
description = "pinglab library"
requires-python = ">=3.10"
dependencies = [
    "graphviz>=0.21",
    "matplotlib>=3.10.0",
    "numpy>=2.2.6",
    "torch>=2.2.0",
    "pydantic>=2.12.4",
    "pyyaml>=6.0.2",
    "rich>=13.9.0",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
